k8/mechwiz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mechwiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mechwiz
  template:
    metadata:
      labels:
        app: mechwiz
    spec:
      containers:
        - name: mechwiz
          image: mechwiz:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5000
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
