k8/dynamodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-service
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: dynamodb
