k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mechwiz-service
spec:
  type: ClusterIP
  selector:
    app: mechwiz
  ports:
    - port: 80
      targetPort: 5000
